Finalise "Low Friction" OMSS Measurements

--- a/arne/test/LowFriction/index.html
+++ b/arne/test/LowFriction/index.html
@@ -23,6 +23,8 @@ var files = [
 </script>
 
 <style> /* HTML */
+h1 { font-size: 1em; }
+dl { margin-top: 1.5em; }
 dt strong { font-weight: bold; }
 dd { margin-bottom: 1.5em; margin-left: 0; }
 p { margin: 0; }
@@ -41,6 +43,10 @@ text.ordinate tspan { alignment-baseline: before-edge; text-anchor: middle; }
 text.abscissa tspan { alignment-baseline: middle; text-anchor: end; }
 text tspan.mask{ fill: #ffd; stroke: #ffd; stroke-width: 2px; }
 </style>
+
+<h1>Low Friction OMSS Measurements</h1>
+
+<p><span id=value>0</span> of <span id=max>?</span> files loaded successfully.
 
 <dl id=out></dl>
 
