2012 version of the site
The main site is replaced by something that at least is somewhat
pleasant to look at. This back-dated commit contains a more or less
historically accurate copy of the version as it was at the time. Also,
the "professional" home page's repository is added as a submodule, but
the repository was not in fact synced with what was actually online at
the time.

--- a/arne/index.html
+++ b/arne/index.html
@@ -1,132 +1,45 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<HTML LANG="en"><HEAD>
-	<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
-	<LINK REV="made" HREF="mailto:webmaster&#64;johannessen.de" TITLE="Arne Johannessen">
-	<TITLE>Arne Johannessen</TITLE>
-	<STYLE TYPE="text/css"><!--
-BODY {
-	background: #dfd;
-	color: black;
-	margin: 25px;
-	font-size: 100%;
-	font-family: "Garamond", "Palatino", serif;
-}
-P {
-	margin: 0 0 24px;
-}
-#content-abovefold {
-	background: white;
-	color: inherit;
-	border-color: green;
-	border-width: 1px 1px 0 1px;
-	border-style: solid solid none solid;
-	padding: 25px;
-}
-#content-abovefold {  /* no fold */
-	border-bottom: 1px solid green;
-	width: 61.8%;
-}
-#content-belowfold {
-	float: left;
-	clear: left;
-	width: 61.8%;
-	padding-bottom: 20px;
-	background: white;
-	color: inherit;
-	border-color: green;
-	border-width: 0 1px 1px 1px;
-	border-style: none solid solid solid;
-}
-#content-belowfold P {
-	margin: 0 25px;
-	padding-top: 20px;
-}
-#content-belowfold P:first-child {
-	margin-top: -25px;
-	z-index: 1;
-}
-#sidebar {
-	padding: 25px 0 0 25px;
-	margin-left: 61.8%;
-	border-top: green 1px solid;
-}
-
-H1 {
-	margin: 0;
-	padding: 0;
-	font-size: 120%;
-}
-#bothBoxes {
-	background: #dfd;
-	color: inherit;
-	float: left;
-	margin: .2em 25px 20px -26px;
-	padding: 0 1em .5em 26px;
-	border-color: green;
-	border-width: 1px 1px 1px 0;
-	border-style: solid solid solid none;
-}
-#bothBoxes H3 {
-	margin-bottom: 0;
-}
-#content-abovefold P, #sidebar P, #sidebar UL {
-	margin: .5em 0;
-}
-#sidebar P, #sidebar ADDRESS {
-	margin-top: 25px;
-}
-#sidebar P:first-child {
-	margin-top: 0;
-}
-UL {
-	padding-left: 1.5em;
-	margin-left: 0;
-}
-CODE {
-	font-family: "American Typewriter", "Courier", "Courier New", "Monaco", monospace;
-	font-size: 2em;
-	color: gray;
-	background-color: inherit;
-}
-
-#footer {
-	padding-top: 20px;
-	clear: both;
-}
---></STYLE>
-</HEAD><BODY>
-	<DIV ID="content-abovefold">
-		<H1>This page is my contribution to the linkrot of the World Wide Web.</H1>
+<!DOCTYPE html>
+<html id=scrollwrapper lang=en>
+<meta charset=UTF-8>
+<title>Arne Johannessen</title>
 <!--
-	</DIV>
-	<DIV ID="content-belowfold">
+<script src=iscroll-lite.js></script>
+<script>
+/*
+var myScroll;
+function loaded() {
+	myScroll = new iScroll('scrollwrapper');
+}
+document.addEventListener('DOMContentLoaded', loaded, false);
+document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
+*/
+</script>
 -->
-		<P><CODE>HTTP/1.1 410 Gone</CODE></P>
-		<P>The content that used to reside at this location was hopelessly outdated and has been that way for quite some time, thus I’ve pulled the plug for now. I’ll be back later.</P>
-		<P>Meanwhile, you might be interested in <A HREF="/~joar0011/" HREFLANG="de">my professional home page</A>. Unfortunately, it is only available in German as yet though.</P>
-		<P>Among other things, I’m also involved with a <A HREF="http://www.skgb.de/" HREFLANG="de">sailing club</A> at a reservoir lake near where I grew up. In fact, I’m a member of the board, so I <A HREF="http://www.skgb.de/author/arne" HREFLANG="de">write</A> quite a bit there, too. The club’s site is German-only and is going to stay that way. Feel free to send us email in English or other languages though—we’ve had club members coming from Britain, Denmark and Japan in the past!</P>
-		<P>Something I used to recommend to anyone looking for a nice yacht to charter in the Western Baltic is the <I STYLE="text-transform:uppercase;font-size:.9em;font-style:normal">SY Gloria,</I> <A HREF="http://www.sy-gloria.de/" HREFLANG="de">a Calypso 43 based in Kiel</A>. However, the option of <A HREF="http://www.sy-gloria.de/skippertraining/begleitet" HREFLANG="de">attended charter</A> may be a better idea for some folks. Do <A HREF="http://www.sy-gloria.de/kontakt" HREFLANG="de">get in touch with Ingo</A> if you’re at all interested! Ingo does speak English even though that web site, too, is German-only.</P>
-	</DIV>
-<!--
-	<DIV ID="sidebar">
-		<P>Other links:</P>
-		<UL>
-			<LI><A HREF="/network/">Network</A></LI>
-			<LI><A HREF="/charts/" HREFLANG="de">Charts</A></LI>
-			<LI><A HREF="/collection" HREFLANG="de">The Collection.</A></LI>
-			<LI><A HREF="http://dev.thaw.de/">dev.thaw.de</A></LI>
-			<LI><A HREF="http://software.thaw.de/">sw.thaw.de</A></LI>
-		</UL>
-		<P>This page (or what’s left of it) still consists of <A HREF="http://validator.w3.org/check?uri=http%3A%2F%2Farne.johannessen.de%2F;verbose=1">valid</A> tableless <A HREF="http://www.w3.org/TR/html401/">HTML 4.01 Strict</A> and <A HREF="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Farne.johannessen.de%2F&amp;warning=2&amp;profile=css2&amp;usermedium=all">valid</A> <A HREF="http://www.w3.org/TR/REC-CSS2/">CSS Level 2</A>.</P>
-	</DIV>
--->
-	<DIV ID="footer">
-		<ADDRESS><A HREF="mailto:webmaster&#64;arne.johannessen.de">webmaster&#64;arne.johannessen.de</A></ADDRESS>
+<style>@import url(style.css);</style>
 
-<!--
-There's yet more to it than meets the eye!
-/fly
-/wunschliste
--->
-	</DIV>
-</BODY></HTML>
+<hgroup>
+<h1>Large Corrections</h1>
+<h2>by Arne Johannessen</h2>
+</hgroup>
+
+<p><strong>Welcome to Arne’s personal pages.</strong> Most of my stuff is either not online or for consumption by closed user groups only, so there's not much more than a couple of links in this space so far. But hey, that’s better than nothing, right?
+
+<p>Even though this page’s name may imply radical change, it’s actually fairly static. I simply don’t have time to run a blog. You can <a href="http://twitter.com/ArneJohannessen">follow me on Twitter</a> if you like, but don’t expect too much activity there, either. (Also, you better be prepared for some language diversity.)
+
+<p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my <strong>professional home page</strong></a>. Unfortunately, it is only available in German as yet though.
+
+<hr>
+
+<p><strong>So what is a Large Correction, anyway?</strong> <a href="http://en.wikipedia.org/wiki/Nautical_chart">Nautical charts</a> always need to be as up-to-date as possible. Nautical chart producers achieve this by publishing <a href="http://en.wikipedia.org/wiki/Notice_to_mariners">Notices to Mariners</a> (NM) containing all relevant updates. On occasion, however, chart updates are so extensive that they are simply too big for being published in NM. Chart publishers then have the option of producing a new edition of the chart from scratch, which was often an unnessessary and expensive step to take in the age of lithography. Consequently, publishers tended to prefer performing the required corrections directly onto the chart original in as many cases as possible. The resulting chart was then advertised as having “Large Corrections” (LC).
+
+<p>Both the term as well as the concept of “Large Corrections” have now fallen out of favour. The use of <a href="http://en.wikipedia.org/wiki/Geographic_information_system">GIS</a> and <a href="http://en.wikipedia.org/wiki/Desktop_publishing">DTP</a> now allows easy production of revised chart reprints, “NM Blocks”—paper chartlets that can be pasted onto the chart by the mariner—, or even entire new editions. Where Large Corrections are still being used, the <a href="http://www.iho.int/">IHO</a> is now recommending to call them “Limited New Editions” (LNE) instead.
+
+<hr>
+
+<p><strong>On another note,</strong> I’m involved with the <a href="http://www.skgb.de/" hreflang=de>sailing club <strong>SKGB</strong></a> at a reservoir lake near where I grew up. In fact, I’m a member of the board, so I <a href="http://www.skgb.de/author/arne" hreflang=de>write</a> a bit there, too. The club’s site is German-only and is going to stay that way. Feel free to send us email in English or other languages though—we used to have club members coming from Britain, Denmark and even Japan!
+
+<p>If you’re in the market for a nice yacht to charter in the Western Baltic, you might be interested in <i class=name>SY Gloria,</i> which is <a href="http://www.sy-gloria.de/" hreflang=de>a Calypso 43 based in Kiel</a>. If you’re new to the type, an <a href="http://www.sy-gloria.de/skippertraining/begleitet" hreflang=de>attended charter</a> is the recommended option. Do <a href="http://www.sy-gloria.de/kontakt" hreflang=de>get in touch with Ingo</a> if you’re at all interested; Ingo does speak English even though that web site, too, is German-only. (Detecting a pattern here, anyone?)
+
+<p>My lawyer makes me add this <strong>imprint</strong> as per the German TMG act of 2007: This service is provided by Arne Johannessen, Sinnerstraße 4, 76185 Karlsruhe, Germany. You can contact me through Twitter (<a href="http://twitter.com/ArneJohannessen">@ArneJohannessen</a>) or by email (<a href="mailto:arne-5032@thaw.de" rel=author>arne-5032@thaw.de</a>). You’re encouraged to get (and use) <a href="/pgp/9e9ef74d.asc">my <strong>PGP</strong> public key</a>.
+
+<p>Lastly, I have to disclose that the <a href="http://www.flickr.com/photos/30701306@N06/2881229155/">background photo</a> was taken by <a href="http://www.flickr.com/photos/30701306@N06/">Horizon2035</a> rather than myself.
