Arne's Notices to Mariners
This back-dated commit adds the Wordpress site for Arne's NM to the
repository. As historic files are unavailable, the most recent version
is added here, with the date being adjusted arbitrarily to match the
conclusion of the first wave of NMs after the site went online.

--- a/arne/index.html
+++ b/arne/index.html
@@ -28,6 +28,8 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 
 <p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my <strong>professional home page</strong></a>. Unfortunately, it is only available in German as yet though.
 
+<p>The one part of this site that does see (more or less) regular updates are <a href="/nm/">my <strong>Notices to Mariners (NM)</strong></a>.
+
 <hr>
 
 <p><strong>So what is a Large Correction, anyway?</strong> <a href="http://en.wikipedia.org/wiki/Nautical_chart">Nautical charts</a> always need to be as up-to-date as possible. Nautical chart producers achieve this by publishing <a href="http://en.wikipedia.org/wiki/Notice_to_mariners">Notices to Mariners</a> (NM) containing all relevant updates. On occasion, however, chart updates are so extensive that they are simply too big for being published in NM. Chart publishers then have the option of producing a new edition of the chart from scratch, which was often an unnessessary and expensive step to take in the age of lithography. Consequently, publishers tended to prefer performing the required corrections directly onto the chart original in as many cases as possible. The resulting chart was then advertised as having “Large Corrections” (LC).
