--- a/arne/index.html
+++ b/arne/index.html
@@ -22,37 +22,24 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 <h2>by Arne Johannessen</h2>
 </hgroup>
 
-<p><strong>Welcome to Arne’s personal pages.</strong> Most of my stuff is either not online or for consumption by closed user groups only, so there's not much more than a couple of links in this space so far. But hey, that’s better than nothing, right?
+<p><strong>Welcome to Arne’s personal pages.</strong> A lot of my stuff is either not online or in walled gardens, so there's not much more than a couple of links in this space at this time. But hey, that’s better than nothing, right?
 
-<p>Even though this page’s name may imply radical change, it’s actually fairly static. I simply don’t have time to run a blog. You can <a href="http://twitter.com/#!/ArneJohannessen">follow me on Twitter</a> if you like, but don’t expect too much activity there, either. (Also, you better be prepared for some language diversity.)
+<p>Even though this page’s name may imply radical change, it’s actually fairly static. I simply don’t have time to run a blog. You can <a href="http://twitter.com/nautofon">follow me on Twitter</a> if you like, but don’t expect too much activity there, either. (Also, you better be prepared for some language diversity.)
 
-<p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my <strong>professional home page</strong></a>. Unfortunately, it is only available in German as yet though.
+<p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my outdated <strong>professional home page</strong></a> (German only) or <a href="https://github.com/johannessen">my <strong>Github</strong> profile</a>.
 
 <p>The one part of this site that does see (more or less) regular updates are <a href="/nm/">my <strong>Notices to Mariners (NM)</strong></a>.
 
 <hr>
 
-<p><strong>So what is a Large Correction, anyway?</strong> <a href="http://en.wikipedia.org/wiki/Nautical_chart">Nautical charts</a> always need to be as up-to-date as possible. Nautical chart producers achieve this by publishing <a href="http://en.wikipedia.org/wiki/Notice_to_mariners">Notices to Mariners</a> (NM) containing all relevant updates. On occasion, however, chart updates are so extensive that they are simply too big for being published in NM. Chart publishers then have the option of producing a new edition of the chart from scratch, which was often an unnessessary and expensive step to take in the age of lithography. Consequently, publishers tended to prefer performing the required corrections directly onto the chart original in as many cases as possible. The resulting chart was then advertised as having “Large Corrections” (LC).
+<p><strong>So what is a Large Correction, anyway?</strong> <a href="http://en.wikipedia.org/wiki/Nautical_chart">Nautical charts</a> always need to be as up-to-date as possible to facilitate safe navigation at sea. Nautical chart producers achieve this by publishing <a href="http://en.wikipedia.org/wiki/Notice_to_mariners">Notices to Mariners</a> (NM) containing all relevant updates. On occasion, however, chart updates are so extensive that they are simply too big for being published in NM. Chart publishers then have the option of producing a new edition of the chart from scratch, which used to be a considerable expense in the age of lithography. Consequently, publishers tended to prefer performing the required corrections directly onto the chart original in as many cases as possible. The resulting chart was then advertised as having “Large Corrections” (LC).
 
-<p>Both the term as well as the concept of “Large Corrections” have now fallen out of favour. The use of <a href="http://en.wikipedia.org/wiki/Geographic_information_system">GIS</a> and <a href="http://en.wikipedia.org/wiki/Desktop_publishing">DTP</a> now allows easy production of revised chart reprints, “NM Blocks”—paper chartlets that can be pasted onto the chart by the mariner—, or even entire new editions. Where Large Corrections are still being used, the <a href="http://www.iho.int/">IHO</a> is now recommending to call them “Limited New Editions” (LNE) instead.
+<p>Both the term as well as the concept of “Large Corrections” have now fallen out of favour. The use of <a href="http://en.wikipedia.org/wiki/Geographic_information_system">GIS</a> and <a href="http://en.wikipedia.org/wiki/Desktop_publishing">DTP</a> now allows easy production of revised chart reprints, “NM Blocks”—paper chartlets that can be pasted onto the chart by the mariner—, or even entire new editions printed on demand. Where Large Corrections are still being used, the <a href="http://www.iho.int/">IHO</a> is now recommending to call them “Limited New Editions” (LNE) instead.
 
 <hr>
 
 <p><strong>On another note,</strong> I’m involved with the <a href="http://www.skgb.de/" hreflang=de>sailing club <strong>SKGB</strong></a> at a reservoir lake near where I grew up. In fact, I’m a member of the board, so I <a href="http://www.skgb.de/author/arne" hreflang=de>write</a> a bit there, too. The club’s site is German-only and is going to stay that way. Feel free to send us email in English or other languages though—we used to have club members coming from Britain, Denmark and even Japan!
 
-<!--p>If you’re in the market for a nice yacht to charter in the Western Baltic, you might be interested in <i class=name>SY Gloria,</i> which is <a href="http://www.sy-gloria.de/" hreflang=de>a Calypso 43 based in Kiel</a>. If you’re new to the type, an <a href="http://www.sy-gloria.de/skippertraining/begleitet" hreflang=de>attended charter</a> is the recommended option. Do <a href="http://www.sy-gloria.de/kontakt" hreflang=de>get in touch with Ingo</a> if you’re at all interested; Ingo does speak English even though that web site, too, is German-only. (Detecting a pattern here, anyone?)-->
-
-<p>My lawyer makes me add this <strong>imprint</strong> as per the German TMG act of 2007: This service is provided by Arne Johannessen, Sinnerstraße 4, 76185 Karlsruhe, Germany. You can contact me through Twitter (<a href="http://twitter.com/ArneJohannessen">@ArneJohannessen</a>) or by email (<a href="mailto:arne-8073@thaw.de" rel=author>arne-8073@thaw.de</a>). You’re encouraged to get (and use) <a href="/pgp/75EB52B0.asc">my <strong>PGP</strong> public key</a>.
+<p>The German TMG act of 2007 makes me add this <strong>imprint:</strong> This service is provided by Arne Johannessen, Sinnerstraße 4, 76185 Karlsruhe, Germany. You can contact me through Twitter (<a href="http://twitter.com/nautofon">@nautofon</a>) or by email (<a href="mailto:arne-5656@thaw.de" rel=author>arne-5656@thaw.de</a>). You’re encouraged to get (and use) <a href="/pgp/75EB52B0.asc">my <strong>PGP</strong> public key</a>.
 
 <p>Lastly, I have to disclose that the <a href="http://www.flickr.com/photos/30701306@N06/2881229155/">background photo</a> was taken by <a href="http://www.flickr.com/photos/30701306@N06/">Horizon2035</a> rather than myself.
-
-<p style="display:none">I don't want these links to be too well-known; I'm mainly putting them here so that the Wayback Machine can maybe find them… <ul style="display:none">
-<li><a href="http://dev.thaw.de/">dev.thaw.de</a>
-<li><a href="http://transaction.perso.libertysurf.fr/interactive/software/cab.htm">Crystal Atari Browser (CAB) v1.5</a>
-<li><a href="http://transaction.perso.libertysurf.fr/interactive/authors/clauss.htm">Alexander Clauss</a>
-<li><a href="http://www.atpm.com/5.03/icab.shtml">Oliver Joppich, iCab Company</a>
-<li><a href="http://www.macwelt.de/news/iCab-Hinter-den-Kulissen-2756311.html">iCab - Hinter den Kulissen</a>
-<li><a href="http://www.macwelt.de/news/Interview-mit-iCab-Entwickler-Oliver-Joppich-2723960.html">iCab-Entwickler Oliver Joppich im Interview</a>
-<li><a href="http://www.macwelt.de/news/iCab-Entwickler-Oliver-Joppich-im-Interview-2740279.html">Interview mit iCab-Entwickler Oliver Joppich</a>
-<li><a href="http://www.stcarchiv.de/stc1999/07_clauss.php">Das Interview mit dem Internet-Taxifahrer Alexander Clauss</a>
-</ul>
