Enable identity consolidation
RelMeAuth is now supported, enabling IndieAuth.com and others to parse identity information from rel=me XFN microformat attributes. Human users are offered a new link to Keybase for manual ID verification.

--- a/arne/index.html
+++ b/arne/index.html
@@ -26,7 +26,7 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 
 <p>Even though this page’s name may imply radical change, it’s actually fairly static. I simply don’t have time to run a blog. You can <a href="http://twitter.com/nautofon">follow me on Twitter</a> if you like, but don’t expect too much activity there, either. (Also, you better be prepared for some language diversity.)
 
-<p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my outdated <strong>professional home page</strong></a> (German only) or <a href="https://github.com/johannessen">my <strong>Github</strong> profile</a>.
+<p>In the meantime, you might be interested in <a href="/~joar0011/" hreflang=de>my outdated <strong>professional home page</strong></a> (German only) or <a href="https://github.com/johannessen" rel=me>my <strong>Github</strong> profile</a>.
 
 <p>The one part of this site that does see (more or less) regular updates are <a href="/nm/">my <strong>Notices to Mariners (NM)</strong></a>.
 
@@ -40,6 +40,6 @@ document.addEventListener('touchmove', function (e) { e.preventDefault(); }, fal
 
 <p><strong>On another note,</strong> I’m involved with the <a href="http://www.skgb.de/" hreflang=de>sailing club <strong>SKGB</strong></a> at a reservoir lake near where I grew up. In fact, I’m a member of the board, so I <a href="http://www.skgb.de/author/arne" hreflang=de>write</a> a bit there, too. The club’s site is German-only and is going to stay that way. Feel free to send us email in English or other languages though—we used to have club members coming from Britain, Denmark and even Japan!
 
-<p>The German TMG act of 2007 makes me add this <strong>imprint:</strong> This service is provided by Arne Johannessen, Sinnerstraße 4, 76185 Karlsruhe, Germany. You can contact me through Twitter (<a href="http://twitter.com/nautofon">@nautofon</a>) or by email (<a href="mailto:arne-5656@thaw.de" rel=author>arne-5656@thaw.de</a>). You’re encouraged to get (and use) <a href="/pgp/75EB52B0.asc">my <strong>PGP</strong> public key</a>.
+<p>The German TMG act of 2007 makes me add this <strong>imprint:</strong> This service is provided by Arne Johannessen, Sinnerstraße 4, 76185 Karlsruhe, Germany. You can contact me through Twitter (<a href="https://twitter.com/nautofon">@nautofon</a>) or by email (<a href="mailto:arne-5656@thaw.de" rel="author">arne-5656@thaw.de</a>). You’re encouraged to get (and use) <a href="pgp/75EB52B0.asc" rel=pgpkey>my <strong>PGP</strong> public key</a>; verify it on <a href="https://keybase.io/johannessen" rel=me>Keybase</a> if you like.
 
 <p>Lastly, I have to disclose that the <a href="http://www.flickr.com/photos/30701306@N06/2881229155/">background photo</a> was taken by <a href="http://www.flickr.com/photos/30701306@N06/">Horizon2035</a> rather than myself.
