--- a/arne/index.html
+++ b/arne/index.html
@@ -66,6 +66,7 @@ header#ajnn h1:after { display: inline-block; position: absolute; margin: -.4ex 
 header#ajnn a { display: block; padding: .4ex .4em; position: absolute; top: 0; right: 0; color: #450; text-decoration: none; border: solid #450 1.5px; }
 header#ajnn a:hover, header a:active { background: #450; color: white; }
 #comm .type { display: inline-block; width: 3em; }
+#comm .how { display: inline-block; width: 5.5em; }
 abbr { text-decoration: none; }
 </style>
 
@@ -108,8 +109,8 @@ abbr { text-decoration: none; }
 	<br><span class=type title="facsimile (not secure)">fax</span> <a href=tel:+49.2264.4194995>+49 2264 4194995</a>
 	<li><span class=type title="XMPP / Jabber chat">xmpp</span> <abbr title="on request only">O/R</abbr>
 	<li><span class=type title="OpenPGP key">pgp</span> <a href=pgp/75EB52B0.asc rel=pgpkey>6e73 c112 75eb 52b0</a>
-	<li>languages   <abbr title=English>EN</abbr>, <abbr title=German>DE</abbr>, <abbr title=Norwegian>NO</abbr>
-	<br>
+	<li><span class=how>languages</span> <abbr title=English>EN</abbr>, <abbr title=German>DE</abbr>, <abbr title=Norwegian>NO</abbr>
+	<br><span class=how>pronouns</span> he / him / his
 </ul>
 <ul id=services><!-- semantically perhaps <section> or <nav> -->
 	<li><a href=//github.com/johannessen>GitHub</a>
