--- a/arne/index.html
+++ b/arne/index.html
@@ -115,8 +115,8 @@ abbr { text-decoration: none; }
 <ul id=services><!-- semantically perhaps <section> or <nav> -->
 	<li><a href=//github.com/johannessen>GitHub</a>
 	<br><a href=//metacpan.org/author/AJNN>CPAN</a>
-	<li><a href=//rafting.io/@nautofon>Fediverse</a>
-	<br><a href=//twitter.com/nautofon>Twitter</a>
+	<li><a href=//mastodon.social/@johannessen rel=me>Fediverse</a>
+	<br><a href=//twitter.com/ArneJohannessen rel=me>Twitter</a>
 	<br><a href=//keybase.io/johannessen rel=me>Keybase</a>
 	<li><a href=//wiki.openstreetmap.org/wiki/User:Arne_Johannessen>OpenStreetMap</a>
 	<li><a href=//www.skgb.de/ hreflang=de onclick="location.href='https://www.skgb.de/author/arne';return false;">SKGB</a>
